feat: ChannelService 구조 변경